Fixed CSS for full responses on mobile devices

--- a/css/ai-teacher-guide.css
+++ b/css/ai-teacher-guide.css
@@ -272,7 +272,7 @@ figcaption {
 }
 .full-response {
   position: absolute;
-  left: 15%;
+  /* left: 15%; */
   top: 30%;
   width: fit-content;
   padding: 10px;
